新增pp+查询